--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -299,13 +299,30 @@
                     <!-- Breadcrumb items -->
                     <div class="pull-left">
                         <ul class="pagination pagination-sm navigation"
-                            data-bind="foreach: $parent.navigation.breadcrumb">
+                            data-bind="foreach: $root.navigation.breadcrumb">
                             <li data-bind="css:{disabled:active}">
-                                <a href="#" class="t-font" data-bind="text: short_name"></a>
+                                <a href="#" class="t-font prev" data-bind="text: short_name"></a>
                             </li>
                         </ul>
                     </div>
                     <!-- Breadcrumb items -->
+                    <!-- Breadcrumb next -->
+                    <div class="pull-left breadcrumb_next">
+                        <div class="btn-group dropup"
+                             data-bind="css:{disabled:$root.navigation.breadcrumb_next().length==0}">
+                            <button type="button" class="btn btn-default">
+                                Next
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                data-bind="foreach: $root.navigation.breadcrumb_next">
+                                <li class="next">
+                                    <a href="#" class="t-font" data-bind="text: short_name"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Breadcrumb next -->
                 </div>
                 <!-- navigation -->
             </div>
