--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -300,8 +300,8 @@
                     <div class="pull-left">
                         <ul class="pagination pagination-sm navigation"
                             data-bind="foreach: $root.navigation.breadcrumb">
-                            <li data-bind="css:{disabled:active}">
-                                <a href="#" class="t-font prev" data-bind="text: short_name"></a>
+                            <li data-bind="css:{disabled:active}" class="prev">
+                                <a href="#" class="t-font " data-bind="text: short_name"></a>
                             </li>
                         </ul>
                     </div>
